# Acompanhamento-de-Cart-es-Ativos

./: .gitignore  README.md  pyproject.toml
app/: ETL.ipynb
