[project]
name = "acompanhamento-de-cart-es-ativos"
version = "0.1.0"
description = ""
authors = [
    {name = "theo lourencao"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
